--- a/sources/views/add_IA_Diag.ui
+++ b/sources/views/add_IA_Diag.ui
@@ -25,7 +25,7 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>20</x>
@@ -38,7 +38,7 @@
     <item>
      <widget class="QGroupBox" name="groupBox">
       <property name="title">
-       <string>GroupBox</string>
+       <string>New Ingenieur affaire</string>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
