--- a/sources/views/add_IA_Diag.ui
+++ b/sources/views/add_IA_Diag.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>329</width>
-    <height>280</height>
+    <width>450</width>
+    <height>483</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -18,8 +18,8 @@
   </property>
   <property name="maximumSize">
    <size>
-    <width>329</width>
-    <height>300</height>
+    <width>450</width>
+    <height>500</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -28,7 +28,7 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>220</x>
+     <x>340</x>
      <y>20</y>
      <width>93</width>
      <height>126</height>
@@ -44,10 +44,10 @@
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>142</y>
-     <width>311</width>
-     <height>131</height>
+     <x>10</x>
+     <y>220</y>
+     <width>431</width>
+     <height>261</height>
     </rect>
    </property>
    <property name="title">
@@ -66,8 +66,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>137</width>
-           <height>87</height>
+           <width>197</width>
+           <height>217</height>
           </rect>
          </property>
         </widget>
@@ -83,8 +83,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>137</width>
-           <height>87</height>
+           <width>197</width>
+           <height>217</height>
           </rect>
          </property>
         </widget>
@@ -94,92 +94,92 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QGroupBox" name="groupBox_2">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>20</y>
-     <width>201</width>
-     <height>111</height>
+     <y>10</y>
+     <width>241</width>
+     <height>201</height>
     </rect>
    </property>
-   <layout class="QFormLayout" name="formLayout">
-    <item row="0" column="0">
-     <widget class="QLabel" name="label">
-      <property name="text">
-       <string>name</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="1">
-     <widget class="QLineEdit" name="IA_Name"/>
-    </item>
-    <item row="1" column="0">
-     <widget class="QLabel" name="label_2">
-      <property name="text">
-       <string>role</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="1">
-     <widget class="QComboBox" name="IA_Role">
-      <item>
-       <property name="text">
-        <string>IA</string>
-       </property>
+   <property name="title">
+    <string>New Business Engineer</string>
+   </property>
+   <layout class="QVBoxLayout" name="verticalLayout_2">
+    <item>
+     <layout class="QFormLayout" name="formLayout">
+      <item row="0" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>name</string>
+        </property>
+       </widget>
       </item>
-      <item>
-       <property name="text">
-        <string>IA - Manager</string>
-       </property>
+      <item row="0" column="1">
+       <widget class="QLineEdit" name="name"/>
       </item>
-      <item>
-       <property name="text">
-        <string>Manager Coach</string>
-       </property>
+      <item row="2" column="0">
+       <widget class="QLabel" name="label_5">
+        <property name="text">
+         <string>entree</string>
+        </property>
+       </widget>
       </item>
-      <item>
-       <property name="text">
-        <string>RA</string>
-       </property>
+      <item row="2" column="1">
+       <widget class="QDateEdit" name="entryDate">
+        <property name="dateTime">
+         <datetime>
+          <hour>0</hour>
+          <minute>0</minute>
+          <second>0</second>
+          <year>2020</year>
+          <month>11</month>
+          <day>1</day>
+         </datetime>
+        </property>
+        <property name="displayFormat">
+         <string>dd/MM/yyyy</string>
+        </property>
+       </widget>
       </item>
-      <item>
-       <property name="text">
-        <string>DA</string>
-       </property>
+      <item row="5" column="0">
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>role</string>
+        </property>
+       </widget>
       </item>
-      <item>
-       <property name="text">
-        <string>DD</string>
-       </property>
+      <item row="5" column="1">
+       <widget class="QComboBox" name="role"/>
       </item>
-     </widget>
-    </item>
-    <item row="2" column="0">
-     <widget class="QLabel" name="label_3">
-      <property name="text">
-       <string>BU</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="1">
-     <widget class="QComboBox" name="BU_comboBox"/>
-    </item>
-    <item row="3" column="0">
-     <widget class="QLabel" name="label_4">
-      <property name="text">
-       <string>manager</string>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="1">
-     <widget class="QComboBox" name="Manager_comboBox">
-      <item>
-       <property name="text">
-        <string>None</string>
-       </property>
+      <item row="7" column="0">
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string>manager</string>
+        </property>
+       </widget>
       </item>
-     </widget>
+      <item row="7" column="1">
+       <widget class="QComboBox" name="manager">
+        <item>
+         <property name="text">
+          <string>None</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item row="4" column="0">
+       <widget class="QLabel" name="label_3">
+        <property name="text">
+         <string>BU</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="1">
+       <widget class="QComboBox" name="BU"/>
+      </item>
+     </layout>
     </item>
    </layout>
   </widget>
