small windows size adjustment

--- a/sources/views/mainWindow.ui
+++ b/sources/views/mainWindow.ui
@@ -10,6 +10,18 @@
     <height>834</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>1193</width>
+    <height>834</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>1193</width>
+    <height>834</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
@@ -30,7 +42,7 @@
        </size>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="adm">
        <attribute name="title">
